# taskpilot

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  install.sh  taskpilot.toml  test.sh
project-docs/: architecture.md  project-brief.md
src/: config.rs  constants.rs  install.rs  main.rs  pipeline.rs  recipe.rs  registry.rs  runner.rs  skill.rs  testutil.rs  tools.rs  workspace.rs
test/: prompt.md
test/skills/markdown-report/: SKILL.md
test/staging/: clean_data.py  cleaned_data.csv  sales_data.csv
tests/: integration.rs
