[package]
name = "taskpilot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "taskpilot"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
walkdir = "2"
colored = "2"
dotenvy = "0.15"
toml = "0.8"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3"
